# python-project-cookiecutter

./: README.md  cookiecutter.json  spec.md
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: README.md  pyproject.toml
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: __init__.py  __main__.py
