[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.version }}"
authors = [
    {
        name = "{{ cookiecutter.author_name }}",
        email = "{{ cookiecutter.author_email }}"
    },
]
description = "{{ cookiecutter.description }}"
readme = "README.md"
requires-python = ">={{ cookiecutter.min_python_version }}"
dependencies = [
    {%- if cookiecutter.create_cli == "yes" %}
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    {%- endif %}
]

[tool.hatch.envs.default]
dependencies = [
    "mypy>=1.8.0",
    "ruff>=0.1.11",
    "pylint>=3.0.3",
]

[tool.hatch.envs.test]
skip-install = true
detached = true
dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[tool.ruff]
target-version = "py{{ cookiecutter.min_python_version.replace('.', '') }}"
line-length = 120
select = ["E", "F", "B", "I"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
