[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.version }}"
authors = [
    {
        name = "{{ cookiecutter.author_name }}",
        email = "{{ cookiecutter.author_email }}"
    },
]
description = "{{ cookiecutter.description }}"
readme = "README.md"
requires-python = ">={{ cookiecutter.min_python_version }}"
dependencies = [
    {%- if cookiecutter.create_cli == "yes" %}
    "typer[all]",
    "rich",
    {%- endif %}
]

[tool.hatch.envs.default]
dependencies = []

[tool.hatch.envs.test]
skip-install = true
detached = true
dependencies = [
    "pytest",
    "pytest-cov",
]

[tool.hatch.envs.lint]
skip-install = true
detached = true
dependencies = [
    "mypy",
    "pylint",
    "ruff",
]

[tool.hatch.envs.lint.scripts]
ruff = [
    "ruff check .",
    "ruff format --check .",
]
mypy = "mypy ."
pylint = "pylint src tests"
all = [
    "@ruff",
    "@mypy",
    "@pylint",
]

[tool.hatch.envs.fix]
skip-install = true
detached = true
dependencies = [
    "ruff",
]

[tool.hatch.envs.fix.scripts]
ruff = [
    "ruff check --fix .",
    "ruff format .",
]

[tool.ruff]
line-length = 120
select = ["E", "F", "B", "I"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
